= 2.0.0.94 =
* Image lightbox can show image id if title is empty - FIXED
* Switching package shows all images instead of package image limit - FIXED
* Able to set default zoom level on add listing page map - ADDED
* City, region names with Greek characters causes issue in meta title - FIXED
* AyeCode Connect plugin added in recommend plugins list - ADDED
* GD > Post meta for overall_rating is now rounded to once decimal place (raw value still available) - CHANGED

= 2.0.0.93 =
* Elementor archive items not always given an ID so sometime map is not limited to current listings - FIXED
* Image title & caption with apostrophes shows slash after saved - FIXED
* Elementor social icons phone number displays even when empty - FIXED
* Oxygen page builder can't edit the add listing page because of redirect - FIXED
* Add GD variables to the Yoast extra replacements - ADDED
* Elementor icon list fallback value #hide not working on archive pages - ADDED
* [gd_page_title] shortcode/widget added to show page title on GD pages - ADDED
* Fix for one comment restriction for cookie not enable case - FIXED
* GD pages with Divi builder breaks header - FIXED
* Translated GD screen id may break admin pages UI - FIXED
* Form containing email & password fields has unique id - FIXED
* Add body class geodir-page-cpt-POST_TYPE on search page - ADDED

= 2.0.0.92 =
* Static map sometimes not resizing on mobile view - FIXED
* Fix recent review filter by location - FIXED
* Rank Math sitemap shows 404 error after each GeoDirectory plugin update - FIXED
* Yoast SEO v14.4 compatibility changes - FIXED

= 2.0.0.91 =
* Category font awesome icons have extra fas class on output which break few icons – FIXED
* Post badge widget shows excluded fields from package - FIELD
* GD Archive map with elementor loop might not filter markers if map is before loop - FIXED
* Translation of screen_id break GD dashboard functionality - FIXED
* YOOtheme shows incorrect title on GD pages - FIXED